# algo_reasoning

./: .gitignore  README.md  download_data.py  pyproject.toml  requirements.txt  run.py  store_dataset.py  test.ipynb  to_run.py
.github/workflows/: test.yaml
AlgorithmicReasoning.jl/: Project.toml
AlgorithmicReasoning.jl/CLRS30.jl/: Manifest.toml
AlgorithmicReasoning.jl/CLRS30.jl/src/: CLRS30.jl
AlgorithmicReasoning.jl/src/: AlgorithmicReasoning.jl  Eval.jl  Train.jl
CLRS30_Julia/: Manifest.toml  Project.toml
CLRS30_Julia/CLRS30/: Manifest.toml  Project.toml
algo_reasoning/src/: data.py  eval.py  probing.py  run.py  sampler.py  specs.py  train.py  utils.py
algo_reasoning/utils/: utils.py
algorithm_args/: default.yaml
clrs/: clrs.ipynb
clrs/models/: encoders.py
examples_haiku/: clrs.ipynb  linear_reg.py
experiments/: ablation_experiment.sh  bfs_nohints.sh  error_run.sh  generalist_run.sh  hidden_reg.sh  irm_penalty.sh  oversmoothing_analysis.py  run_chebnet_experiment.sh  run_gat.sh  run_s2gnn  run_spectralmpnn.sh  run_spectralmpnn_exclusively.sh  specformer_experiment.sh
model_args/: bfs_nohints.yaml  spectralmpnn_nomp.yaml
notebooks/: FourierFeaturesComparison.ipynb  fourier_features_comparison.ipynb  gsp.ipynb  homophily.ipynb  model_test.ipynb  verify_regularization.ipynb  verify_spectral_architectures.ipynb
src/: experiment.py
src/data/: data.py  sampler.py
src/models/: LogisticRegression.py  encoder.py  processor.py
test/: clrs30_test.py  decoder_test.py  encoder_test.py  network_test.py  processor_test.py  utils.py
(+36 files in other folders)
