[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "algo_reasoning"
version = "0.0.0"
authors = [
  { name="Ronald Albert"},
]
description = "Neural Algorithmic Reasoning"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[tool.setuptools]
packages = ["algo_reasoning"]
